# GPU-Tensor-Permute

./: CMakeLists.txt  README.md  main.cu  seqdata_permute.cuh
